--- a/BlackJack/tl-blackjack-webapp/views/game.erb
+++ b/BlackJack/tl-blackjack-webapp/views/game.erb
@@ -1,22 +1,53 @@
-<h3>Welcome to Blackjack <%= session[:player_name] %>.</h3>
+<div id="game">
+  <%if @loser %>
+    <div class="alert alert-error"><%=@loser%></div>
+  <% end %>
+  <%if @winner %>
+    <div class="alert alert-success"><%=@winner%></div>
+  <% end %>
+  <% if @play_again %>
+    <p>
+      <h5>Play again?</h5>
+      <a href="/bet" class="btn btn-primary">Yes</a>
+      <a href="/game_over" class="btn">No</a>
+    </p>
+  <% end %>
 
-Dealer cards:
-<% session[:dealer_cards].each do |card| %>
-  <%= card.to_s %>
-<% end %>
-<br>
-Total: <%= calculate_total(session[:dealer_cards]) %>
+  <div class="well">
+    <h4>Dealer cards:</h4>
+    <% session[:dealer_cards].each_with_index do |card, i| %>
+      <% if session[:turn] != "dealer" && i == 0 %>
+        <img class="card_image" src="/images/cards/cover.jpg">
+      <% else %>
+        <%= card_image(card) %>
+      <% end %>
+    <% end %>
+    <!-- <p><h4>Total: <%= calculate_total(session[:dealer_cards]) %></h4></p> -->
 
-<br><br>
+    <% if @show_dealer_hit_button %>
+      <form id="dealer_hit" action="/game/dealer/hit" method='post'>
+        <input type="submit" class="btn btn-primary" value="Click to see Dealer card &larr;" />
+      </form>
+    <% end %>
+  </div>
 
-<%= session[:player_name] %> cards:
-<% session[:player_cards].each do |card| %>
-  <%= card.to_s %>
-<% end %>
-<br>
-Total: <%= calculate_total(session[:player_cards]) %>
+  <div class="well" id="player_cards">
+    <h4><%= session[:player_name] %>'s cards:</h4>
+    <% session[:player_cards].each do |card| %>
+      <%= card_image(card) %>
+    <% end %>
+    <p><h5>Total: <%= calculate_total(session[:player_cards]) %></h4></p>
+    <p><h5>Bet: $<%= session[:player_bet] %></h4></p>
+    <p><h5>Remaining: $<%= session[:player_pot] %></h4></p>
+  </div>
 
-<!--
-# Form needed for hit or stay
--->
+  <% if @show_hit_or_stay_buttons %>
+    <form id="hit_form" action="/game/player/hit" method='post'>
+      <input type="submit" class="btn btn-success" value="Hit" />
+    </form>
 
+    <form id="stay_form" action="/game/player/stay" method='post'>
+      <input type="submit" class="btn btn-warning" value="Stay" />
+    </form>
+  <% end %>
+</div>
