--- a/BlackJack/tl-blackjack-webapp/views/layout.erb
+++ b/BlackJack/tl-blackjack-webapp/views/layout.erb
@@ -4,6 +4,8 @@
     <title>My First App</title>
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/application.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="/application.js"></script>
   </head>
   <body style="padding-top: 50px;">
 
@@ -11,8 +13,11 @@
       <div class="navbar-inner">
         <div class="container">
             <ul class="nav">
-              <li><a href="/">Nav Item</a></li>
+              <li><a href="/welcome">New Game</a></li>
             </ul>
+            <% if session[:player_name] %>
+              <h4>Welcome to Blackjack <%= session[:player_name] %>.</h4>
+            <% end %>
         </div>
       </div>
     </div>
@@ -20,6 +25,9 @@
   <div class="container">
     <%if @error %>
       <div class="alert alert-error"><%=@error%></div>
+    <% end %>
+    <%if @success %>
+      <div class="alert alert-success"><%=@success%></div>
     <% end %>
       <%= yield %>
   </div>
